# SaprotHub-ESM

./: README.md  README_ESM3_Integration.md  minimal_esm3.py  pyproject.toml  requirements.txt  saprot-esm.py  seprot-old.py  seprot.py  seprot_old.py  seproy0427.py  simple_esm3_embedding.py  test.ipynb  test_esm3_integration.py
colab/: ColabSeprot.ipynb  SaprotHub.ipynb  SaprotHub_v2.ipynb
saprot/config/: default.yaml
saprot/dataset/saprot/: saprot_annotation_dataset.py  saprot_classification_dataset.py  saprot_contact_dataset.py  saprot_foldseek_dataset.py  saprot_lm_dataset.py  saprot_pair_classification_dataset.py  saprot_pair_regression_dataset.py  saprot_ppi_dataset.py  saprot_regression_dataset.py  saprot_seq_design_dataset.py  saprot_token_classification_dataset.py
saprot/model/: abstract_model.py
saprot/model/saprot/: base.py  saprot_classification_model.py  saprot_pair_classification_model.py  saprot_pair_regression_model.py  saprot_regression_model.py  saprot_token_classification_model.py  sequence_mutation_model.py
saprot/scripts/: training.py
saprot/utils/: lr_scheduler.py
