[tool.poetry]
name = "saprot"
version = "0.4.7"
description = ""
authors = ["Zhikai Li (modefied by Tianli Tao) <luckydogqaq@163.com>"]
readme = "README.md"


[tool.poetry.dependencies]
torch = "*"
torchvision = "*"
torchaudio = "*"
torchmetrics = "*"
pytorch-lightning = "*"
transformers = "*"
scikit-learn = "*"
tabulate = "*"
biopython = "*"
easydict = "*"
lmdb = "*"
peft = "*"
bio = "*"
wandb = "*"
scipy = "*"
pandas = "*"
matplotlib = "*"
multiprocess = "*"
loguru = "*"
colorama = "*"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
